# rl-research

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  rl-project-structure.md
docs/: README.md
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst
docs/source/api/: algorithms.rst  environments.rst  experiments.rst  utils.rst
docs/source/guides/: configuration.rst  custom_algorithms.rst  custom_environments.rst  experiments.rst  installation.rst  logging.rst  quickstart.rst  visualization.rst
examples/: quickstart.py
examples/conf/: config.yaml
rl_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rl_research/algorithms/: __init__.py  rllib_wrapper.py
rl_research/callbacks/: __init__.py  training.py
rl_research/experiments/: cli.py
rl_research/experiments/configs/: breakout.yaml  config.yaml  experiment.yaml
rl_research/utils/: __init__.py  logger.py  registry.py  viz.py
tests/: test_callbacks.py  test_logger.py  test_setup.py  test_utils.py  test_viz.py  test_wandb_setup.py
wandb/: latest-run
wandb/run-20250207_081721-7euklbr9/: run-7euklbr9.wandb
wandb/run-20250207_081721-7euklbr9/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250207_082243-m2kqxcxt/: run-m2kqxcxt.wandb
wandb/run-20250207_082243-m2kqxcxt/files/: config.yaml  (+2 more)
wandb/run-20250207_082707-a1qcwd77/: run-a1qcwd77.wandb
wandb/run-20250207_082951-nmlso7lz/: run-nmlso7lz.wandb
wandb/run-20250207_083132-yaxhe7nc/: run-yaxhe7nc.wandb
wandb/run-20250207_083513-g61vjgo1/: run-g61vjgo1.wandb
(+21 files in other folders)
